[package]
name = "graft"
version = "0.1.0"
edition = "2021"
authors = ["Sazumi Viki <root@sazumi.moe>"]
description = "High-performance graph analysis framework"

[dependencies]
rayon = "1.7"
petgraph = "0.6"
num-complex = "0.4"
crossbeam = "0.8"
dashmap = "5.4"
rand = "0.8"
itertools = "0.10"
thiserror = "1.0"
parking_lot = "0.12"